--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^1.0.7
+  provider: ^4.3.2
+  uuid: ^2.2.2
+  firebase_auth: ^1.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
