--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^4.3.2
   uuid: ^2.2.2
   firebase_auth: ^1.1.1
+  url_launcher: ^6.0.10
 
 
   # The following adds the Cupertino Icons font to your application.
