--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   uuid: ^2.2.2
   firebase_auth: ^1.1.1
   url_launcher: ^6.0.10
+  splashscreen: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
