--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,3 +64,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
